Fixed scrollbar error

--- a/public/styles/abstracts/_mixins.scss
+++ b/public/styles/abstracts/_mixins.scss
@@ -1,18 +1,8 @@
-//Centers item directly in middle of page
-@mixin center {
-  position: relative;
-  left: 50%;
-  margin-top: 50px;
-  transform: translateX(-50%);
-}
-
 //Grid container
 @mixin grid-layout {
   display: grid;
   grid-template-columns: auto;
   height: 100%;
-  padding: 0;
-  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
