--- a/public/styles/themes/_theme.scss
+++ b/public/styles/themes/_theme.scss
@@ -2,8 +2,7 @@
 body,
 html {
   font-family: "Karla", sans-serif;
-  height: 100%;
-  overflow: hidden;
+  height: 95%;
   background: $primary-color; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     $gradient
